--- a/fungi/css/style.css
+++ b/fungi/css/style.css
@@ -22,6 +22,7 @@
   ul[role="list"],
   ol[role="list"] {
     list-style: none;
+    list-style-type: none;
   }
 
   /* Set core body defaults */
@@ -47,6 +48,11 @@
   h3,
   h4 {
     text-wrap: balance;
+  }
+
+  p,
+  li {
+    text-wrap: pretty;
   }
 
   /* A elements that don't have a class get default styles */
@@ -119,7 +125,7 @@
     --text-brand-light: var(--clr-brand-400);
 
     --background-accent-light: var(--clr-green-400);
-    --background-accent-main: var(--clr-green-500);
+    --background-accent: var(--clr-green-500);
     --background-accent-dark: var(--clr-green-600);
 
     --background-extra-light: var(--clr-brown-500);
@@ -129,14 +135,14 @@
     --background-extra-dark: var(--clr-brown-900);
 
     --font-size-heading-sm: var(--fs-700);
-    --font-size-heading-regular: var(--fs-800);
+    --font-size-heading-base: var(--fs-800);
     --font-size-heading-lg: var(--fs-900);
     --font-size-heading-xl: var(--fs-1000);
 
     --font-size-sm: var(--fs-300);
-    --font-size-regular: var(--fs-400);
+    --font-size-base: var(--fs-400);
     --font-size-md: var(--fs-500);
-    --font-size-lg: var(--fs-600);
+    --font-size-lg: var(--fs-700);
 
     --border-radius-1: 0.25rem;
     --border-radius-2: 0.5rem;
@@ -153,7 +159,8 @@
       --fs-1000: 7.5rem;
     }
   }
-
+}
+@layer base {
   html {
     font-family: var(--ff-body);
     line-height: 1.5;
@@ -162,7 +169,7 @@
   body {
     background-color: var(--background-main);
     color: var(--text-main);
-    font-size: var(--font-size-regular);
+    font-size: var(--font-size-base);
   }
 
   h1,
@@ -170,13 +177,181 @@
   h3,
   h4 {
     color: var(--text-high-contrast);
+
     font-family: var(--ff-heading);
   }
 
-  h1 {
-    font-size: var(--font-size-heading-lg);
+  a {
+    color: var(--text-high-contrast);
+  }
+
+  a:hover,
+  a:focus-visible {
+    color: var(--text-brand-light);
+  }
+
+  img {
+    border-radius: var(--border-radius-3);
   }
 }
+
+@layer structure {
+  section,
+  .section {
+    --padding: 3.75rem;
+    padding-block: var(--padding);
+
+    @media (width > 760px) {
+      --padding: 6rem;
+
+      &[data-padding="compact"] {
+        --padding: 4.5rem;
+      }
+    }
+  }
+  .content {
+    --content-max-width: calc(1130px + 2rem);
+
+    max-width: var(--content-max-width);
+    margin-inline: auto;
+    padding-inline: 1rem;
+
+    &[data-width="wide"] {
+      --content-max-width: calc(1330px + 2rem);
+    }
+    &[data-width="narrow"] {
+      --content-max-width: calc(720px + 2rem);
+    }
+  }
+
+  .column {
+    display: grid;
+    gap: var(--equal-space, 1rem);
+    align-items: var(--col-align, stretch);
+
+    @media (width > 768px) {
+      grid-auto-flow: column;
+      grid-auto-columns: 1fr;
+    }
+
+    &[data-gap="large"] {
+      --equal-space: 2em;
+    }
+
+    &[data-align="center"] {
+      --col-align: center;
+    }
+  }
+  .flow > * + * {
+    margin-top: var(--flow-space, 1em);
+  }
+
+  .grid-flow {
+    display: grid;
+    gap: var(--grid-flow-space, 1rem);
+
+    align-content: start;
+    justify-items: start;
+  }
+}
+
+@layer components {
+  .main-head {
+    padding-block: 1rem;
+  }
+  .inner-head {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .main-nav {
+    ul {
+      display: flex;
+      gap: 1rem;
+      text-decoration: none;
+      list-style-type: none;
+    }
+  }
+
+  .hero {
+    background-image: url(../assets/hero.webp);
+    background-size: cover;
+    color: var(--text-high-contrast);
+    font-size: var(--font-size-md);
+    text-align: center;
+
+    .hero-title {
+      font-size: var(--font-size-heading-lg);
+
+      span {
+        display: block;
+        color: var(--clr-brand-500);
+        font-size: var(--font-size-heading-xl);
+      }
+    }
+  }
+
+  .card {
+    display: grid;
+    gap: var(--card-gap, 1rem);
+    background-color: var(--background-light);
+    padding: 1rem;
+    border-radius: var(--border-radius-3);
+
+    img {
+      border-radius: var(--border-radius-2);
+    }
+  }
+
+  .card-title {
+    color: var(--card-title-color, var(--text-brand));
+    font-size: var(--card-title-fs, var(--font-size-heading-sm));
+  }
+
+  .button,
+  button {
+    background-color: var(--background-accent);
+    display: inline-flex;
+    padding: 0.5rem 1rem;
+    font-family: var(--ff-heading);
+    font-size: var(--font-size-md);
+    font-weight: 600;
+    text-decoration: none;
+    border-radius: var(--border-radius-2);
+  }
+
+  .button:hover,
+  button:hover,
+  .button:focus-visible,
+  button:focus-visible {
+    background-color: var(--background-accent-light);
+    color: var(--text-high-contrast);
+  }
+
+  .site-footer {
+    display: grid;
+    gap: 2rem;
+    background-color: var(--background-dark);
+    padding-block: 2rem;
+    text-align: center;
+
+    p {
+      font-size: var(--font-size-md);
+      font-family: var(--ff-body);
+    }
+    a {
+      text-decoration: none;
+      color: var(--text-main);
+
+      &:hover,
+      &:focus-visible {
+        color: var(--text-brand-light);
+      }
+    }
+  }
+}
+
 @layer utilities {
   .visually-hidden {
     clip: rect(0 0 0 0);
@@ -186,5 +361,76 @@
     position: absolute;
     white-space: nowrap;
     width: 1px;
+  }
+
+  .text-center {
+    text-align: center;
+  }
+
+  .text-main {
+    color: var(--text-main);
+  }
+  .text-high-contrast {
+    color: var(--text-high-contrast);
+  }
+  .text-brand {
+    color: var(--text-brand);
+  }
+  .text-brand-ligh {
+    color: var(--text-brand-ligh);
+  }
+
+  .bg-accent-light {
+    background-color: var(--background-accent-light);
+  }
+  .bg-accent {
+    background-color: var(--background-accent);
+  }
+  .bg-accent-dark {
+    background-color: var(--background-accent-dark);
+  }
+  .bg-extra-light {
+    background-color: var(--background-extra-light);
+  }
+  .bg-light {
+    background-color: var(--background-light);
+  }
+  .bg-main {
+    background-color: var(--background-main);
+  }
+  .bg-dark {
+    background-color: var(--background-dark);
+  }
+  .bg-extra-dark {
+    background-color: var(--background-extra-dark);
+  }
+
+  .heading-sm {
+    font-size: var(--font-size-heading-sm);
+  }
+  .heading-base {
+    font-size: var(--font-size-heading-base);
+  }
+  .heading-lg {
+    font-size: var(--font-size-heading-lg);
+  }
+  .heading-xl {
+    font-size: var(--font-size-heading-xl);
+  }
+  .section-heading {
+    font-size: var(--font-size-heading-base);
+  }
+
+  .font-size-sm {
+    font-size: var(--font-size-sm);
+  }
+  .font-size-base {
+    font-size: var(--font-size-base);
+  }
+  .font-size-md {
+    font-size: var(--font-size-md);
+  }
+  .font-size-lg {
+    font-size: var(--font-size-lg);
   }
 }
