--- a/fungi/css/style.css
+++ b/fungi/css/style.css
@@ -256,6 +256,19 @@
 }
 
 @layer components {
+  .skip-nav:not(:focus) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+
+  .skip-nav:focus {
+    position: absolute;
+  }
   .main-head {
     padding-block: 1rem;
   }
