--- a/fungi/css/style.css
+++ b/fungi/css/style.css
@@ -11,6 +11,7 @@
     -moz-text-size-adjust: none;
     -webkit-text-size-adjust: none;
     text-size-adjust: none;
+    scroll-behavior: smooth;
   }
 
   * {
@@ -142,7 +143,7 @@
     --font-size-sm: var(--fs-300);
     --font-size-base: var(--fs-400);
     --font-size-md: var(--fs-500);
-    --font-size-lg: var(--fs-700);
+    --font-size-lg: var(--fs-600);
 
     --border-radius-1: 0.25rem;
     --border-radius-2: 0.5rem;
@@ -246,10 +247,15 @@
     margin-top: var(--flow-space, 1em);
   }
 
-  .grid-flow {
-    display: grid;
-    gap: var(--grid-flow-space, 1rem);
+  .flex-group {
+    display: flex;
+    gap: 0.5rem;
+  }
 
+  .filter-grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr));
     align-content: start;
     justify-items: start;
   }
@@ -354,7 +360,8 @@
   }
 
   .card {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: var(--card-gap, 1rem);
     background-color: var(--background-light);
     padding: 1rem;
@@ -370,6 +377,46 @@
     font-size: var(--card-title-fs, var(--font-size-heading-sm));
   }
 
+  .mushroom-guide {
+    --card-title-color: var(--text-high-contrast);
+    --card-title-fs: var(--font-size-lg);
+  }
+
+  .cat-list {
+    display: flex;
+    gap: 0.5rem;
+
+    li {
+      padding: 0.125rem 0.25rem;
+      color: var(--text-high-contrast);
+      font-family: var(--ff-heading);
+      font-size: var(--font-size-sm);
+      border-radius: var(--border-radius-1);
+    }
+
+    [data-edible="edible"] {
+      background-color: var(--background-accent);
+    }
+    [data-edible="toxic"] {
+      background-color: var(--clr-red-500);
+    }
+    [data-season="summer"] {
+      background-color: var(--background-accent);
+    }
+    [data-season="fall"] {
+      background-color: var(--clr-teal-500);
+    }
+    [data-season="spring"] {
+      background-color: var(--clr-orange-500);
+    }
+  }
+
+  .card-note {
+    background-color: var(--background-extra-light);
+    margin-block-start: auto;
+    padding: 0.75rem;
+    border-radius: var(--border-radius-2);
+  }
   .button {
     background-color: var(--background-accent);
     display: inline-flex;
@@ -385,6 +432,61 @@
   .button:focus-visible {
     background-color: var(--background-accent-light);
     color: var(--text-high-contrast);
+  }
+
+  select {
+    background-color: var(--background-accent);
+    padding: 0.5rem 1rem;
+    color: var(--text-high-contrast);
+    border: 0;
+    border-radius: var(--border-radius-2);
+  }
+
+  .bento {
+    display: grid;
+    gap: 1rem;
+    grid-template-areas: "card-1" "card-2" "card-3" "card-4";
+    --card-title-color: var(--text-high-contrast);
+
+    .card > img {
+      height: 100%;
+      object-fit: cover;
+    }
+    .card:nth-child(1) {
+      grid-area: card-1;
+    }
+    .card:nth-child(2) {
+      grid-area: card-2;
+    }
+    .card:nth-child(3) {
+      grid-area: card-3;
+    }
+    .card:nth-child(4) {
+      grid-area: card-4;
+    }
+
+    @media (width > 620px) {
+      grid-template-areas: "card-1 card-2" "card-3 card-4";
+    }
+
+    @media (width > 900px) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-areas: "card-1 card-2 card-4" "card-3 card-3 card-4";
+
+      .card:nth-child(2) img {
+        order: 3;
+      }
+      .card.card:nth-child(3) {
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: 1fr 1fr;
+        align-items: stretch;
+        img {
+          grid-column: 1/2;
+          grid-row: 1/3;
+        }
+      }
+    }
   }
 
   .site-footer {
@@ -407,9 +509,8 @@
         color: var(--text-brand-light);
       }
     }
-  }
+  } /* footer **/
 }
-
 @layer utilities {
   .visually-hidden {
     clip: rect(0 0 0 0);
