--- a/fungi/css/style.css
+++ b/fungi/css/style.css
@@ -1,3 +1,7 @@
+@view-transition {
+  navigation: auto;
+}
+
 @layer reset {
   /* Box sizing rules */
   *,
@@ -255,7 +259,7 @@
   .filter-grid {
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(250px, 100%), 1fr));
     align-content: start;
     justify-items: start;
   }
@@ -512,6 +516,9 @@
   } /* footer **/
 }
 @layer utilities {
+  [hidden] {
+    display: none;
+  }
   .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
